verison 1.0版本完成，当前支持json和x-www-from两种content-type格式的数据返回桩数据

--- a/conf/logger.conf
+++ b/conf/logger.conf
@@ -29,7 +29,7 @@ class = handlers.RotatingFileHandler
 level = DEBUG
 formatter = simpleFormatter
 parentPath=c:/projects/pyCharm/flaskMockDemo/
-args = (r'./logs/info.log','a',200000,9)
+args = (r'%(parentPath)s./logs/info.log','a',200000,9)
 [handler_timedRotateFileHandler]
 class = handlers.TimedRotatingFileHandler
 level = DEBUG
