--- a/conf/logger.conf
+++ b/conf/logger.conf
@@ -1,22 +1,22 @@
-
-
 [loggers]
-keys = root,run
-
+keys = root,run,interface
 [handlers]
-
-keys = consoleHandler,rotateFileHandler,timedRotateFileHandler
+keys = consoleHandler,rotateFileHandler,timedRotateFileHandler,interfaceHandler
 [formatters]
 keys = simpleFormatter
 [formatter_simpleFormatter]
 format = [%(asctime)s]%(levelname)s | %(name)s: %(message)s
 [logger_root]
-
 level = DEBUG
 handlers = consoleHandler,rotateFileHandler
-[logger_run]
+[logger_interface]
 level = DEBUG
-handlers = consoleHandler,timedRotateFileHandler
+handlers = interfaceHandler
+qualname = interface
+propagate = 0
+[logger_run]
+level = INFO
+handlers = timedRotateFileHandler
 qualname = run
 propagate = 0
 [handler_consoleHandler]
@@ -26,13 +26,16 @@ formatter = simpleFormatter
 args = (sys.stdout,)
 [handler_rotateFileHandler]
 class = handlers.RotatingFileHandler
-level = DEBUG
 formatter = simpleFormatter
 parentPath=c:/projects/pyCharm/flaskMockDemo/
 args = (r'%(parentPath)s./logs/info.log','a',200000,9)
 [handler_timedRotateFileHandler]
 class = handlers.TimedRotatingFileHandler
-level = DEBUG
 formatter = simpleFormatter
 parentPath=c:/projects/pyCharm/flaskMockDemo/
 args = (r'%(parentPath)s./logs/run.log','H',1,)
+[handler_interfaceHandler]
+class = handlers.RotatingFileHandler
+formatter = simpleFormatter
+parentPath=c:/projects/pyCharm/flaskMockDemo/
+args = (r'%(parentPath)s./logs/interface.log','a',200000,9)
